--- a/style.css
+++ b/style.css
@@ -83,3 +83,94 @@ form .input-wrapper i {
   top: 50%;
   transform: translateY(-50%);
 }
+form h1 {
+  font-size: 26px;
+  font-weight: 600;
+  letter-spacing: 0;
+  margin: 25px 0 0 0;
+  transform: translateZ(50px);
+}
+
+form p {
+  color: var(--color);
+  font-size: 16px;
+  margin: 2px 0 44px 0;
+  transform: translateZ(50px);
+}
+
+form input[type='text'],
+form input[type='password'] {
+  background-color: var(--input-bg-color);
+  border: none;
+  border-radius: 6px;
+  color: var(--color);
+  font-size: 16px;
+  padding: 14px 12px;
+  transition: all 250ms ease-in-out;
+}
+
+form input[type='text']:focus,
+form input[type='password']:focus {
+  background-color: var(--input-focus-bg-color);
+  outline: none;
+}
+
+form input[type='text']:focus+i,
+form input[type='password']:focus+i {
+  color: var(--input-focus-icon-color);
+}
+
+form input {
+  width: 100%;
+}
+
+form ::placeholder {
+  color: var(--placeholder-color);
+  font-size: 16px;
+  opacity: 1;
+}
+
+form .button-wrapper {
+  transform: translateZ(50px);
+}
+
+form button[type='submit'] {
+  background: transparent;
+  border: none;
+  border-radius: 6px;
+  color: var(--submit-color);
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  padding: 12px 10px;
+  width: 100%;
+}
+
+form button[type='submit'] i {
+  margin-left: 5px;
+}
+
+#c {
+  color: crimson;
+}
+
+@media only screen and (max-width: 768px) {
+  form {
+      width: 110%;
+  }
+}
+
+@media only screen and (max-width: 576px) {
+  form {
+      width: 130%;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  form {
+      width: 150%;
+  }
+}
+
